src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Metro Display - Media Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting answer</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Final Negotiations</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Metro Display - Opportunities</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Brief</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discussion</fullName>
        </values>
        <values>
            <fullName>Final Negotiations</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>POPMAC</fullName>
        <description>POPMAC Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Brief</fullName>
        </values>
        <values>
            <fullName>Closed Carrying</fullName>
        </values>
        <values>
            <fullName>Closed Effective Call</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discussion</fullName>
        </values>
        <values>
            <fullName>Final Negotiations</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Wowcher - Opportunities</fullName>
        <description>Wowcher Opportunity Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved %26 Scheduled</fullName>
        </values>
        <values>
            <fullName>Approved - Awaiting Scheduling</fullName>
        </values>
        <values>
            <fullName>Has Run</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending Analyst Action</fullName>
        </values>
        <values>
            <fullName>Pending Sales Action</fullName>
        </values>
        <values>
            <fullName>Pitch Lost</fullName>
        </values>
        <values>
            <fullName>Proposal Sent</fullName>
        </values>
        <values>
            <fullName>Provisionally Scheduled</fullName>
        </values>
        <values>
            <fullName>Signed</fullName>
        </values>
        <values>
            <fullName>Signed rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Wowcher Display</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Discussion</fullName>
        </values>
        <values>
            <fullName>Final Negotiations</fullName>
        </values>
        <values>
            <fullName>Preparation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ANL_Commission__c</fullName>
        <label>ANL % Commission</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionItems1__c</fullName>
        <formula>HYPERLINK(&apos;/p/attach/NoteAttach?pid=&apos;&amp;Id&amp;&apos;&amp;retURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c, IMAGE(&apos;/resource/Attachments&apos;, &apos;Add Attachments&apos;),&apos;_self&apos;) &amp; IMAGE(&apos;/resource/Spacer&apos;,&apos;&apos;) &amp;
HYPERLINK(&apos;/002/e?parent_id=&apos;&amp;Id&amp;&apos;&amp;retURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c, IMAGE(&apos;/resource/Notes&apos;, &apos;Create Notes&apos;),&apos;_self&apos;) &amp; IMAGE(&apos;/resource/Spacer&apos;,&apos;&apos;) &amp;
HYPERLINK(&apos;/00T/e?what_id=&apos;&amp;Id&amp;&apos;&amp;retURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c, IMAGE(&apos;/resource/Tasks&apos;, &apos;Create Task&apos;),&apos;_self&apos;) &amp; IMAGE(&apos;/resource/Spacer&apos;,&apos;&apos;) &amp;
HYPERLINK(&apos;/00U/e?what_id=&apos;&amp;Id&amp;&apos;&amp;retURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c, IMAGE(&apos;/resource/Calendar&apos;, &apos;Create Events&apos;),&apos;_self&apos;) &amp; IMAGE(&apos;/resource/Spacer&apos;,&apos;&apos;) &amp;
HYPERLINK(&apos;/_ui/core/email/author/EmailAuthor?p3_lkid=&apos;&amp;Id&amp;&apos;&amp;retURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c, IMAGE(&apos;/resource/Mail&apos;, &apos;Send Email&apos;),&apos;_self&apos;) &amp; IMAGE(&apos;/resource/Spacer&apos;,&apos;&apos;) &amp;
HYPERLINK(&apos;/00T/e?what_id=&apos;&amp;Id&amp;&apos;&amp;followup=1&amp;retURL=apex/PitchHub?sfdc.tabName=&apos;&amp;$Setup.Pitch_Hub_Settings__c.Custom_Tab_ID__c, IMAGE(&apos;/resource/LogCall&apos;, &apos;Log a Call&apos;),&apos;_self&apos;)</formula>
        <label>Activity Management</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <label>Actual Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Affluence__c</fullName>
        <label>Affluence</label>
        <picklist>
            <picklistValues>
                <fullName>Hard Pressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate Means</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comfortably Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Prosperity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealthy Acheiver</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Agency account type should be Agency or Direct Advertiser and it needs to be Active.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Direct Advertiser,Billing Agency,Charity,Private Advertiser,Brand, Booking Agency</value>
            </filterItems>
            <filterItems>
                <field>Account.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pitches (Agency)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <inlineHelpText>INBOUND: Sale / Advancement 
OUTBOUND: Sales / Advancement</inlineHelpText>
        <label>Agreement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Analyst Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes__c</fullName>
        <label>Analyst Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Point__c</fullName>
        <label>Approval Point</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutoTaskLostCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoTaskLostCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoTaskWonCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoTaskWonCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banker_or_Steal__c</fullName>
        <label>Banker or Steal</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Book_By__c</fullName>
        <description>Wowcher Field</description>
        <label>Book By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Bug__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if merchant is using booking bug</inlineHelpText>
        <label>Booking Bug?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Product__c</fullName>
        <label>Lead Ad Brand/Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Pleas choose an appropriate category for the deal.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FoodBeverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HealthCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeEssentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeGarden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewellery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classified_Minor_Category__c</fullName>
        <label>Classified - Minor Category</label>
        <picklist>
            <controllingField>IndClassLvl1__c</controllingField>
            <picklistValues>
                <fullName>Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessories &amp; Soft Furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia &amp; New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balearics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bedrooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building &amp; Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Businesses For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire &amp; Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claims Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical &amp; Secretarial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatories, Lofts &amp; Extensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts &amp; Tenders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornwall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cotswolds</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Classified_Sub_Category__c</fullName>
        <label>Classified - Sub Category</label>
        <picklist>
            <controllingField>IndClassLvl1__c</controllingField>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Parking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apprenticeships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (General)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Motors)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auctions (Property)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;B/Guest Houses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bars/Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bathing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battlefields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Births, Deaths and Marriages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business to Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camping and Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravan Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravans &amp; Motorhomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars wanted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charity Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Living</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collectables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complementary Therapies &amp; Wellbeing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Close_Reason_Description__c</fullName>
        <label>Close Reason Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close__c</fullName>
        <inlineHelpText>INBOUND: Booking taken / Next steps confirmed 
OUTBOUND: Booking taken / Next steps confirmed</inlineHelpText>
        <label>Close</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closing_Date__c</fullName>
        <inlineHelpText>Enter the latest date the deal can run to.</inlineHelpText>
        <label>Deal Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Colour__c</fullName>
        <label>Lead Ad Colour</label>
        <picklist>
            <picklistValues>
                <fullName>Mono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Rewards__c</fullName>
        <label>Commission Rewards</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Lead Ad Competitor</label>
        <picklist>
            <controllingField>LeadSource</controllingField>
            <picklistValues>
                <fullName>City Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Express - Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Mirror Saturday - We Love Telly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Saturday - Hot Tv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Star Sunday - Ok Extra/Take 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily Telegraph Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Times Saturday- Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Listings/ Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian Saturday- Weekend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent &amp; I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday (B/t)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent On Sunday - Review (T)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent Saturday - Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mids only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday(B/bl)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observer Sunday - Observer Mag (A4)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Media - Digital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MD Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountOfCustomerRef1__c</fullName>
        <label>No of CCI Metro products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.CustomerRef__c</field>
            <operation>equals</operation>
            <value>CustomerRef1</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfCustomerRef2__c</fullName>
        <label>No of AdVance products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.CustomerRef__c</field>
            <operation>equals</operation>
            <value>CustomerRef2</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountOfCustomerRef3__c</fullName>
        <label>No of CCI Mail products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.CustomerRef__c</field>
            <operation>equals</operation>
            <value>CustomerRef3</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Provisional_Products__c</fullName>
        <label>Count of Provisional Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Name__c</field>
            <operation>contains</operation>
            <value>Provisional</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Profile__c</fullName>
        <description>Profile for Created By</description>
        <formula>CreatedBy.Profile.Name</formula>
        <label>CreatedBy Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Using__c</fullName>
        <label>Created Using</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Lead conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreationMethod__c</fullName>
        <label>CreationMethod</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerRef1AdvertiserNotification__c</fullName>
        <label>CCI Metro Advertiser Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef1AgencyNotification__c</fullName>
        <label>CCI Metro Agency Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef2AdvertiserNotification__c</fullName>
        <label>AdVance Mail Advertiser Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef2AgencyNotification__c</fullName>
        <label>AdVance Mail Agency Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef3AdvertiserNotification__c</fullName>
        <label>CCI Mail Advertiser Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerRef3AgencyNotification__c</fullName>
        <label>CCI Mail Agency Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Approved__c</fullName>
        <label>Date Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Publication__c</fullName>
        <label>Lead Ad Date of Publication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_signed__c</fullName>
        <label>Date signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dates_Times__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if all dates &amp; times in redemption period are subject to availability</inlineHelpText>
        <label>Restrictions Apply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Age__c</fullName>
        <label>Deal Age</label>
        <picklist>
            <picklistValues>
                <fullName>Young</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Closing_Date_2__c</fullName>
        <formula>TEXT(Day( Closing_Date__c ))+&quot;/&quot;+TEXT(Month(Closing_Date__c ))+&quot;/&quot;+TEXT(Year(Closing_Date__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Closing Date 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Gender__c</fullName>
        <label>Deal Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Location__c</fullName>
        <label>Deal Location</label>
        <picklist>
            <controllingField>Deal_Region__c</controllingField>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach Holidays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackpool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bournemouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bradford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brighton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christmas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Break 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>City Break 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cornwall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coventry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Essex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Cities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasgow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloucestershire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grimsby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heart of England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hull and East Riding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipswich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>